feat: agregar modelo Favorite y categoria
